other_stuff/python_parser/pddlParser.py
# Generated from pddl.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class pddlParser ( Parser ):

    grammarFileName = "pddl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'define'", "')'", "'domain'", 
                     "':requirements'", "':types'", "'-'", "'either'", "'expression'", 
                     "':functions'", "'number'", "':constants'", "':predicates'", 
                     "':constraints'", "':action'", "':parameters'", "':precondition'", 
                     "':effect'", "':agents'", "'and'", "'or'", "'not'", 
                     "'imply'", "'exists'", "'forall'", "'intends'", "'delegated'", 
                     "':durative-action'", "':duration'", "':condition'", 
                     "'preference'", "'at'", "'over'", "'start'", "'end'", 
                     "'all'", "':derived'", "':axiom'", "':vars'", "':context'", 
                     "':implies'", "'when'", "'*'", "'+'", "'/'", "'>'", 
                     "'<'", "'='", "'>='", "'<='", "'assign'", "'scale-up'", 
                     "'scale-down'", "'increase'", "'decrease'", "'?duration'", 
                     "'problem'", "':domain'", "':objects'", "':init'", 
                     "':goal'", "':metric'", "'minimize'", "'maximize'", 
                     "'total-time'", "'is-violated'", "'always'", "'sometime'", 
                     "'within'", "'at-most-once'", "'sometime-after'", "'sometime-before'", 
                     "'always-within'", "'hold-during'", "'hold-after'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "REQUIRE_KEY", "NAME", "VARIABLE", "NUMBER", "LINE_COMMENT", 
                      "WHITESPACE", "DOMAIN", "DOMAIN_NAME", "REQUIREMENTS", 
                      "TYPES", "EITHER_TYPE", "CONSTANTS", "FUNCTIONS", 
                      "PREDICATES", "ACTION", "DURATIVE_ACTION", "PROBLEM", 
                      "PROBLEM_NAME", "PROBLEM_DOMAIN", "OBJECTS", "INIT", 
                      "FUNC_HEAD", "PRECONDITION", "EFFECT", "AND_GD", "OR_GD", 
                      "NOT_GD", "IMPLY_GD", "EXISTS_GD", "FORALL_GD", "COMPARISON_GD", 
                      "AND_EFFECT", "FORALL_EFFECT", "WHEN_EFFECT", "ASSIGN_EFFECT", 
                      "NOT_EFFECT", "PRED_HEAD", "GOAL", "BINARY_OP", "UNARY_MINUS", 
                      "INIT_EQ", "INIT_AT", "NOT_PRED_INIT", "PRED_INST", 
                      "PROBLEM_CONSTRAINT", "PROBLEM_METRIC" ]

    RULE_pddlDoc = 0
    RULE_domain = 1
    RULE_domainName = 2
    RULE_requireDef = 3
    RULE_typesDef = 4
    RULE_typedNameList = 5
    RULE_singleTypeNameList = 6
    RULE_r_type = 7
    RULE_primType = 8
    RULE_functionsDef = 9
    RULE_functionList = 10
    RULE_atomicFunctionSkeleton = 11
    RULE_functionSymbol = 12
    RULE_functionType = 13
    RULE_constantsDef = 14
    RULE_predicatesDef = 15
    RULE_atomicFormulaSkeleton = 16
    RULE_predicate = 17
    RULE_typedVariableList = 18
    RULE_singleTypeVarList = 19
    RULE_constraints = 20
    RULE_structureDef = 21
    RULE_actionDef = 22
    RULE_actionSymbol = 23
    RULE_actionDefBody = 24
    RULE_precondition = 25
    RULE_goalDesc = 26
    RULE_fComp = 27
    RULE_atomicTermFormula = 28
    RULE_term = 29
    RULE_durativeActionDef = 30
    RULE_daDefBody = 31
    RULE_daGD = 32
    RULE_prefTimedGD = 33
    RULE_timedGD = 34
    RULE_timeSpecifier = 35
    RULE_interval = 36
    RULE_derivedDef = 37
    RULE_axiomDef = 38
    RULE_axiomDefBody = 39
    RULE_context = 40
    RULE_implies = 41
    RULE_fExp = 42
    RULE_fExp2 = 43
    RULE_fHead = 44
    RULE_effect = 45
    RULE_agent = 46
    RULE_cEffect = 47
    RULE_pEffect = 48
    RULE_condEffect = 49
    RULE_binaryOp = 50
    RULE_binaryComp = 51
    RULE_assignOp = 52
    RULE_durationConstraint = 53
    RULE_simpleDurationConstraint = 54
    RULE_durOp = 55
    RULE_durValue = 56
    RULE_daEffect = 57
    RULE_timedEffect = 58
    RULE_fAssignDA = 59
    RULE_fExpDA = 60
    RULE_assignOpT = 61
    RULE_problem = 62
    RULE_problemDecl = 63
    RULE_problemDomain = 64
    RULE_objectDecl = 65
    RULE_init = 66
    RULE_initEl = 67
    RULE_nameLiteral = 68
    RULE_atomicNameFormula = 69
    RULE_goal = 70
    RULE_probConstraints = 71
    RULE_prefConGD = 72
    RULE_metricSpec = 73
    RULE_optimization = 74
    RULE_metricFExp = 75
    RULE_conGD = 76
    RULE_name = 77

    ruleNames =  [ "pddlDoc", "domain", "domainName", "requireDef", "typesDef", 
                   "typedNameList", "singleTypeNameList", "r_type", "primType", 
                   "functionsDef", "functionList", "atomicFunctionSkeleton", 
                   "functionSymbol", "functionType", "constantsDef", "predicatesDef", 
                   "atomicFormulaSkeleton", "predicate", "typedVariableList", 
                   "singleTypeVarList", "constraints", "structureDef", "actionDef", 
                   "actionSymbol", "actionDefBody", "precondition", "goalDesc", 
                   "fComp", "atomicTermFormula", "term", "durativeActionDef", 
                   "daDefBody", "daGD", "prefTimedGD", "timedGD", "timeSpecifier", 
                   "interval", "derivedDef", "axiomDef", "axiomDefBody", 
                   "context", "implies", "fExp", "fExp2", "fHead", "effect", 
                   "agent", "cEffect", "pEffect", "condEffect", "binaryOp", 
                   "binaryComp", "assignOp", "durationConstraint", "simpleDurationConstraint", 
                   "durOp", "durValue", "daEffect", "timedEffect", "fAssignDA", 
                   "fExpDA", "assignOpT", "problem", "problemDecl", "problemDomain", 
                   "objectDecl", "init", "initEl", "nameLiteral", "atomicNameFormula", 
                   "goal", "probConstraints", "prefConGD", "metricSpec", 
                   "optimization", "metricFExp", "conGD", "name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    REQUIRE_KEY=76
    NAME=77
    VARIABLE=78
    NUMBER=79
    LINE_COMMENT=80
    WHITESPACE=81
    DOMAIN=82
    DOMAIN_NAME=83
    REQUIREMENTS=84
    TYPES=85
    EITHER_TYPE=86
    CONSTANTS=87
    FUNCTIONS=88
    PREDICATES=89
    ACTION=90
    DURATIVE_ACTION=91
    PROBLEM=92
    PROBLEM_NAME=93
    PROBLEM_DOMAIN=94
    OBJECTS=95
    INIT=96
    FUNC_HEAD=97
    PRECONDITION=98
    EFFECT=99
    AND_GD=100
    OR_GD=101
    NOT_GD=102
    IMPLY_GD=103
    EXISTS_GD=104
    FORALL_GD=105
    COMPARISON_GD=106
    AND_EFFECT=107
    FORALL_EFFECT=108
    WHEN_EFFECT=109
    ASSIGN_EFFECT=110
    NOT_EFFECT=111
    PRED_HEAD=112
    GOAL=113
    BINARY_OP=114
    UNARY_MINUS=115
    INIT_EQ=116
    INIT_AT=117
    NOT_PRED_INIT=118
    PRED_INST=119
    PROBLEM_CONSTRAINT=120
    PROBLEM_METRIC=121

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class PddlDocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domain(self):
            return self.getTypedRuleContext(pddlParser.DomainContext,0)


        def problem(self):
            return self.getTypedRuleContext(pddlParser.ProblemContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_pddlDoc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPddlDoc" ):
                listener.enterPddlDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPddlDoc" ):
                listener.exitPddlDoc(self)




    def pddlDoc(self):

        localctx = pddlParser.PddlDocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pddlDoc)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.domain()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.problem()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def domainName(self):
            return self.getTypedRuleContext(pddlParser.DomainNameContext,0)


        def requireDef(self):
            return self.getTypedRuleContext(pddlParser.RequireDefContext,0)


        def typesDef(self):
            return self.getTypedRuleContext(pddlParser.TypesDefContext,0)


        def constantsDef(self):
            return self.getTypedRuleContext(pddlParser.ConstantsDefContext,0)


        def predicatesDef(self):
            return self.getTypedRuleContext(pddlParser.PredicatesDefContext,0)


        def functionsDef(self):
            return self.getTypedRuleContext(pddlParser.FunctionsDefContext,0)


        def constraints(self):
            return self.getTypedRuleContext(pddlParser.ConstraintsContext,0)


        def structureDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.StructureDefContext)
            else:
                return self.getTypedRuleContext(pddlParser.StructureDefContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)




    def domain(self):

        localctx = pddlParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(pddlParser.T__0)
            self.state = 161
            self.match(pddlParser.T__1)
            self.state = 162
            self.domainName()
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 163
                self.requireDef()


            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 166
                self.typesDef()


            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 169
                self.constantsDef()


            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 172
                self.predicatesDef()


            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 175
                self.functionsDef()


            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 178
                self.constraints()


            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pddlParser.T__0:
                self.state = 181
                self.structureDef()
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DomainNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(pddlParser.NameContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_domainName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomainName" ):
                listener.enterDomainName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomainName" ):
                listener.exitDomainName(self)




    def domainName(self):

        localctx = pddlParser.DomainNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_domainName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(pddlParser.T__0)
            self.state = 190
            self.match(pddlParser.T__3)
            self.state = 191
            self.name()
            self.state = 192
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RequireDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_KEY(self, i:int=None):
            if i is None:
                return self.getTokens(pddlParser.REQUIRE_KEY)
            else:
                return self.getToken(pddlParser.REQUIRE_KEY, i)

        def getRuleIndex(self):
            return pddlParser.RULE_requireDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireDef" ):
                listener.enterRequireDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireDef" ):
                listener.exitRequireDef(self)




    def requireDef(self):

        localctx = pddlParser.RequireDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_requireDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(pddlParser.T__0)
            self.state = 195
            self.match(pddlParser.T__4)
            self.state = 197 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 196
                self.match(pddlParser.REQUIRE_KEY)
                self.state = 199 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==pddlParser.REQUIRE_KEY):
                    break

            self.state = 201
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesDefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typedNameList(self):
            return self.getTypedRuleContext(pddlParser.TypedNameListContext,0)


        def getRuleIndex(self):
            return pddlParser.RULE_typesDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypesDef" ):
                listener.enterTypesDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypesDef" ):
                listener.exitTypesDef(self)




    def typesDef(self):

        localctx = pddlParser.TypesDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typesDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.match(pddlParser.T__0)
            self.state = 204
            self.match(pddlParser.T__5)
            self.state = 205
            self.typedNameList()
            self.state = 206
            self.match(pddlParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedNameListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.NameContext)
            else:
                return self.getTypedRuleContext(pddlParser.NameContext,i)


        def singleTypeNameList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pddlParser.SingleTypeNameListContext)
            else:
                return self.getTypedRuleContext(pddlParser.SingleTypeNameListContext,i)


        def getRuleIndex(self):
            return pddlParser.RULE_typedNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedNameList" ):
                listener.enterTypedNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedNameList" ):
                listener.exitTypedNameList(self)




    def typedNameList(self):

        localctx = pddlParser.TypedNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 225
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 32)) & ~0x3f) == 0 and ((1 << (_la - 32)) & ((1 << (pddlParser.T__31 - 32)) | (1 << (pddlParser.T__32 - 32)) | (1 << (pddlParser.NAME - 32)))) != 0):
                    self.state = 208
                    self.name()
                    self.state = 213
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.state = 215 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 214
                        self.singleTypeNameList()
